libs/image/kis_distance_information.cpp
@@ -83,6 +83,8 @@ struct Q_DECL_HIDDEN KisDistanceInformation::Private {
 
     int currentDabSeqNo;
     int levelOfDetail;
+
+    qreal lastMaxPressure = 0.0;
 };
 
 struct Q_DECL_HIDDEN KisDistanceInitInfo::Private {
@@ -384,6 +386,11 @@ int KisDistanceInformation::currentDabSeqNo() const
     return m_d->currentDabSeqNo;
 }
 
+qreal KisDistanceInformation::maxPressure() const
+{
+    return m_d->lastMaxPressure;
+}
+
 bool KisDistanceInformation::isStarted() const
 {
     return m_d->lastPaintInfoValid;
@@ -408,6 +415,8 @@ void KisDistanceInformation::registerPaintedDab(const KisPaintInformation &info,
     m_d->timing = timing;
 
     m_d->currentDabSeqNo++;
+
+    m_d->lastMaxPressure = qMax(info.pressure(), m_d->lastMaxPressure);
 }
 
 qreal KisDistanceInformation::getNextPointPosition(const QPointF &start,
